// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group should render correctly with all the default props 1`] = `
.c5 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 0px 0px 8px;
  cursor: pointer;
}

.c2 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  margin: 8px 0px;
  display: grid;
  grid-template-columns: minmax(max-content,20%) minmax(max-content,80%);
  grid-template-areas: 'label field' 'random description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c0 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  margin: 8px;
  display: inline-grid;
  grid-template-columns: max-content auto;
  grid-template-areas: 'field label' 'description random';
}

.c3 .c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c6 {
  width: 16px;
  height: 16px;
  position: relative;
  border-radius: 100%;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  background-color: #012040;
  width: 0;
  height: 0;
  z-index: 1;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c7:focus {
  outline: none;
}

.c7:checked ~ .c8 {
  width: calc(75%);
  height: calc(75%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

<div>
  <div
    class="c0"
  >
    
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        <label
          class="c4 c5"
          for="Female"
        >
          Female
        </label>
        <div
          class="c6"
        >
          <input
            class="c7"
            id="Female"
            name=""
            type="radio"
          />
          <div
            class="c8 c9"
          />
        </div>
      </div>
      <div
        class="c3"
      >
        <label
          class="c4 c5"
          for="Male"
        >
          Male
        </label>
        <div
          class="c6"
        >
          <input
            class="c7"
            id="Male"
            name=""
            type="radio"
          />
          <div
            class="c8 c9"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio Group should render correctly with all the props given 1`] = `
.c6 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 0px 0px 8px;
  cursor: pointer;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  color: #555;
  margin: 0px 0px 8px 0px;
}

.c2::after {
  color: red;
  content: ' *';
}

.c4 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  margin: 8px;
  display: inline-grid;
  grid-template-columns: max-content auto;
  grid-template-areas: 'field label' 'description random';
}

.c5 .c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 {
  margin: 8px 0px;
  display: grid;
  grid-template-areas: 'label' 'field' 'description';
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  width: 24px;
  height: 24px;
  position: relative;
  border-radius: 100%;
  border: 1px solid #CCCCCC;
  background-color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  background-color: #012040;
  width: 0;
  height: 0;
  z-index: 1;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  opacity: 0;
  z-index: 2;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  cursor: pointer;
}

.c8:focus {
  outline: none;
}

.c8:checked ~ .c9 {
  width: calc(75%);
  height: calc(75%);
  -webkit-transition: width 0.2s ease,height 0.2s ease;
  transition: width 0.2s ease,height 0.2s ease;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1 c2"
      required=""
    >
      Gender
    </label>
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <label
          class="c1 c6"
          for="Female"
        >
          Female
        </label>
        <div
          class="c7"
        >
          <input
            class="c8"
            id="Female"
            name="gender"
            required=""
            type="radio"
          />
          <div
            class="c9 c10"
          />
        </div>
      </div>
      <div
        class="c5"
      >
        <label
          class="c1 c6"
          for="Male"
        >
          Male
        </label>
        <div
          class="c7"
        >
          <input
            class="c8"
            id="Male"
            name="gender"
            required=""
            type="radio"
          />
          <div
            class="c9 c10"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
